Added subscribe and unsubscribe pages.

--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
 
 					<div class="col-sm-4">
 						<h4>Updates</h4>
-						<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="#">email</a> or <a href="#">RSS</a>.</p>
+						<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="subscribe.html">email</a> or <a href="#">RSS</a>.</p>
 					</div>
 				</div>
 			</div>
