--- a/public/about.html
+++ b/public/about.html
@@ -6,15 +6,10 @@
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
 		<link href="stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
 		<link href="stylesheets/styles.css" rel="stylesheet" type="text/css">
-		<link href="stylesheets/about.css" rel="stylesheet" type="text/css">
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/bootstrap.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			jQuery(document).ready(function($)
-			{
-				// Enable Tooltips
-				$("[data-toggle='tooltip']").tooltip();
-			});
+			jQuery(document).ready(function($){});
 		</script>
 	</head>
 
@@ -29,22 +24,22 @@
 			</div>
 		</header>
 
-		<blockquote>
+		<section class="jumbotron">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-10 col-lg-offset-1">
+					<blockquote class="col-lg-10 col-lg-offset-1">
 						<p>&ldquo;The true spirit of conversation consists more in bringing out the cleverness of others than in showing a great deal of it yourself; he who goes away pleased with himself and his own wit is also greatly pleased with you.&rdquo;</p>
 						<small>Jean de La Br&ugrave;yere</small>
-					</div>
+					</blockquote>
 				</div>
 			</div>
-		</blockquote>
+		</section>
 
 		<article>
 			<div class="container">
 				<div class="row">
 					<section class="col-lg-6 col-lg-offset-3">
-						<p style="font-size: 32px"><em>Books &amp; Conversations</em> was born out of a desire to combine my two great loves&mdash;great books and passionate conversation.</p>
+						<p class="lead"><em>Books &amp; Conversations</em> was born out of a desire to combine my two great loves&mdash;thought-provoking books and engaging conversation.</p>
 						<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that&rsquo;s what you see at a toy store. And you must think you&rsquo;re in a toy store, because you&rsquo;re here shopping for an infant named Jeb. </p>
 						<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
 						<p>Besides, I&rsquo;ve already been through too much shit this morning over this case to hand it over to your dumb ass. </p>
@@ -71,17 +66,17 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<h4>Suggest</h4>
-						<p>Is there a book that would spark a great conversation?  <a href="#">Let me know</a>.</p>
+						<p>Know a book that would spark a great conversation?  <a href="#">Let me know</a>.</p>
 					</div>
 
 					<div class="col-sm-4">
 						<h4>Converse</h4>
-						<p>Would you like to take part in the next conversation about books?  <a href="#">Get in touch</a>.</p>
+						<p>Want to take part in the next conversation?  <a href="#">Get in touch</a>.</p>
 					</div>
 
 					<div class="col-sm-4">
 						<h4>Updates</h4>
-						<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="#">email</a> or <a href="#">RSS</a>.</p>
+						<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="subscribe.html">email</a> or <a href="#">RSS</a>.</p>
 					</div>
 				</div>
 			</div>
