Updated Twitter Bootstrap to 3.0 RC2.

--- a/public/about.html
+++ b/public/about.html
@@ -27,10 +27,12 @@
 		<section class="jumbotron">
 			<div class="container">
 				<div class="row">
-					<blockquote class="col-lg-10 col-lg-offset-1">
-						<p>&ldquo;The true spirit of conversation consists more in bringing out the cleverness of others than in showing a great deal of it yourself; he who goes away pleased with himself and his own wit is also greatly pleased with you.&rdquo;</p>
-						<small>Jean de La Br&ugrave;yere</small>
-					</blockquote>
+					<div class="col-md-10 col-md-offset-1">
+						<blockquote>
+							<p>&ldquo;The true spirit of conversation consists more in bringing out the cleverness of others than in showing a great deal of it yourself; he who goes away pleased with himself and his own wit is also greatly pleased with you.&rdquo;</p>
+							<small>Jean de La Br&ugrave;yere</small>
+						</blockquote>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -38,7 +40,7 @@
 		<article>
 			<div class="container">
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<p class="lead"><em>Books &amp; Conversations</em> was born out of a desire to combine my two great loves&mdash;thought-provoking books and engaging conversation.</p>
 						<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that&rsquo;s what you see at a toy store. And you must think you&rsquo;re in a toy store, because you&rsquo;re here shopping for an infant named Jeb. </p>
 						<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
@@ -47,7 +49,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<h2>Thanks</h2>
 						<p>My sincerest thanks to everyone who has contributed to making <em>Books &amp; Conversations</em> what it is.</p>
 						<ul class="list-inline-separated text-center">
