--- a/public/confirm.html
+++ b/public/confirm.html
@@ -27,7 +27,7 @@
 		<article class="jumbotron">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-lg-offset-3">
+					<div class="col-md-6 col-md-offset-3">
 						<h2>You&rsquo;ve just been sent an email to confirm your email address.</h2>
 						<p>Please follow the link in this email to confirm your subscription (check your spam or junk mail folders).</p>
 					</div>
