--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,14 @@
 		<link href="stylesheets/styles.css" rel="stylesheet" type="text/css">
 		<link href="stylesheets/the-shape-of-design.css" rel="stylesheet" type="text/css">
 		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/jquery.anchor.scroll.js"></script>
 		<script src="javascripts/bootstrap.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			jQuery(document).ready(function($)
 			{
+				// Enable smooth scrolling for anchor links.
+				$("a[href^='#']").anchorScroll();
+
 				// Enable Tooltips
 				$("[data-toggle='tooltip']").tooltip();
 			});
@@ -24,16 +28,16 @@
 				<div class="row">
 					<div class="col-12">
 						<h2><em>A conversation about</em></h2>
-						<h1>The Shape <em>of</em> Design</h1>
+						<h1><a href="#introduction">The Shape <em>of</em> Design</a></h1>
 						<h2><em>by</em> Frank Chimero</h2>
-						<img src="images/header-the-shape-of-design.gif" width="247" height="300" class="img-responsive">
+						<a href="#introduction"><img src="images/header-the-shape-of-design.gif" width="247" height="300" class="img-responsive"></a>
 					</div>
 				</div>
 
 				<h2><em>with</em></h2>
 
 				<div class="row">
-					<div class="col-12 col-sm-2 col-lg-offset-1">
+					<div class="col-12 col-sm-2 col-sm-offset-1">
 						<img src="images/avatar-jngo.jpg" alt="John Ngo" width="100" height="100" class="img-circle">
 						<h3>John Ngo</h3>
 						<p><a href="https://twitter.com/jngo">@jngo</a><br>Moderator</p>
@@ -66,10 +70,10 @@
 			</div>
 		</header>
 
-		<article>
+		<article id="introduction">
 			<div class="container">
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<h2>Introduction</h2>
 						<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that&rsquo;s what you see at a toy store. And you must think you&rsquo;re in a toy store, because you&rsquo;re here shopping for an infant named Jeb. </p>
 						<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
@@ -78,14 +82,14 @@
 				</div>
 
 				<div class="row">
-					<aside class="col-lg-3">
+					<aside class="col-md-3">
 						<blockquote>
 							<p>&ldquo;Then I&rsquo;m gonna shoot that bitch in the kneecaps, find out where my goddamn money is.&rdquo;</p>
 							<small>Beng-Fai Mok</small>
 						</blockquote>
 					</aside>
 
-					<section class="col-lg-6">
+					<section class="col-md-6">
 						<p class="avatar"><img src="images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John Ngo"></p>
 						<p><strong>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit?</strong></p>
 						<p class="avatar"><img src="images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Cat Townsend"></p>
@@ -100,7 +104,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<p class="avatar"><img src="images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John Ngo"></p>
 						<p><strong>Now that we know who you are, I know who I am. I&rsquo;m not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain&rsquo;s going to be?</strong></p>
 						<p class="avatar"><img src="images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Cat Townsend"></p>
@@ -119,7 +123,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<p class="avatar"><img src="images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John Ngo"></p>
 						<p><strong>Look, just because I don&rsquo;t be givin&rsquo; no man a foot massage don&rsquo;t make it right for Marsellus to throw Antwone into a glass motherfuckin&rsquo; house, fuckin&rsquo; up the way the nigger talks.</strong></p>
 						<p class="avatar"><img src="images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Beng-Fai Mok"></p>
@@ -134,7 +138,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-10 col-lg-offset-1">
+					<section class="col-md-10 col-md-offset-1">
 						<blockquote>
 							<p>&ldquo;Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it?&rdquo;</p>
 							<small>Cat Townsend</small>
@@ -143,7 +147,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<p class="avatar"><img src="images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John Ngo"></p>
 						<p><strong>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you.</strong></p>
 						<p class="avatar"><img src="images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Cat Townsend"></p>
@@ -162,7 +166,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<p class="avatar"><img src="images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John Ngo"></p>
 						<p><strong>Your bones don&rsquo;t break, mine do. That&rsquo;s clear.</strong></p>
 						<p class="avatar"><img src="images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Beng-Fai Mok"></p>
@@ -177,7 +181,7 @@
 				</div>
 
 				<div class="row">
-					<section class="col-lg-6 col-lg-offset-3">
+					<section class="col-md-6 col-md-offset-3">
 						<h2>The Book</h2>
 						<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
 					</section>
