--- a/public/subscribe.html
+++ b/public/subscribe.html
@@ -27,25 +27,25 @@
 		<section class="jumbotron">
 			<div class="container">
 				<div class="row">
-					<form action="confirm.html" method="get" class="col-lg-6 col-lg-offset-3 form-horizontal">
+					<form action="confirm.html" method="get" class="col-md-6 col-md-offset-3 form-horizontal">
 						<h2>Subscribe for updates by email.</h2>
 						<p>We both hate spam, so let&rsquo;s limit this relationship to updates about <em>Books &amp; Conversations</em> shall we?</p>
 						<div class="form-group">
-							<label for="subscription-name" class="col-lg-3 control-label">Name</label>
-							<div class="col-lg-7">
+							<label for="subscription-name" class="col-md-3 control-label">Name</label>
+							<div class="col-md-7">
 								<input type="text" required="required" placeholder="Name" autofocus="autofocus" class="form-control" id="subscription-name">
 							</div>
 						</div>
 
 						<div class="form-group">
-							<label for="subscription-email" class="col-lg-3 control-label">Email</label>
-							<div class="col-lg-7">
+							<label for="subscription-email" class="col-md-3 control-label">Email</label>
+							<div class="col-md-7">
 								<input type="email" required="required" placeholder="Email" class="form-control" id="subscription-email">
 							</div>
 						</div>
 
 						<div class="form-group">
-							<div class="col-lg-offset-3 col-lg-10">
+							<div class="col-md-offset-3 col-md-10">
 								<button type="submit" class="btn btn-default">Subscribe</button>
 							</div>
 						</div>
