--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
 		<link href="stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href="stylesheets/bootstrap-buttons.css" rel="stylesheet" type="text/css">
 		<link href="stylesheets/styles.css" rel="stylesheet" type="text/css">
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/bootstrap.js"></script>
@@ -27,7 +28,7 @@
 		<article class="jumbotron">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-lg-offset-3">
+					<div class="col-md-6 col-md-offset-3">
 						<h2>Thanks for subscribing.</h2>
 						<p>I&rsquo;ll let you know when <em>Books &amp; Conversations</em> is updated.</p><p>In the meantime, it would be awesome if you told your friends about <em>Books &amp; Conversations</em>.</p><p>Pretty please?</p>
 						<ul class="list-inline">
