--- a/public/unsubscribe.html
+++ b/public/unsubscribe.html
@@ -27,7 +27,7 @@
 		<article class="jumbotron">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-lg-offset-3 form-horizontal">
+					<div class="col-md-6 col-md-offset-3 form-horizontal">
 						<h2>Sorry to see you go.</h2>
 						<p>I hate saying goodbyes, please give <em>Books &amp; Conversations</em> another chance.  Things will be different this time&hellip;</p>
 						<p>I promise.</p>
