Added mailto and website links.

--- a/public/index.html
+++ b/public/index.html
@@ -46,19 +46,19 @@
 					<div class="col-12 col-sm-2">
 						<img src="images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="100" height="100" class="img-circle">
 						<h3>Cat Townsend</h3>
-						<p><a href="https://twitter.com/catisnotpretty">@catisnotpretty</a><br>Design</p>
+						<p><a href="https://twitter.com/catisnotpretty">@catisnotpretty</a><br><a href="http://www.notpretty.net/">notpretty.net</a><br>Design</p>
 					</div>
 
 					<div class="col-12 col-sm-2">
 						<img src="images/avatar-sjors.jpg" alt="Sjors Timmer" width="100" height="100" class="img-circle">
 						<h3>Sjors Timmer</h3>
-						<p><a href="https://twitter.com/sjors">@sjors</a><br>User Experience</p>
+						<p><a href="https://twitter.com/sjors">@sjors</a><br><a href="http://notura.com/">notura.com</a><br>User Experience</p>
 					</div>
 
 					<div class="col-12 col-sm-2">
 						<img src="images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="100" height="100" class="img-circle">
 						<h3>Beng-Fai Mok</h3>
-						<p><a href="https://twitter.com/bengfai">@bengfai</a><br>Product</p>
+						<p><a href="https://twitter.com/bengfai">@bengfai</a><br><a href="http://www.mok.io/">mok.io</a><br>Product</p>
 					</div>
 
 					<div class="col-12 col-sm-2">
