--- a/public/confirm.html
+++ b/public/confirm.html
@@ -40,12 +40,12 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<h4>Suggest</h4>
-						<p>Know a book that would spark a great conversation?  <a href="#">Let me know</a>.</p>
+						<p>Know a book that would spark a great conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Let me know</a>.</p>
 					</div>
 
 					<div class="col-sm-4">
 						<h4>Converse</h4>
-						<p>Want to take part in the next conversation?  <a href="#">Get in touch</a>.</p>
+						<p>Want to take part in the next conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
 					</div>
 
 					<div class="col-sm-4">
