--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<h4>Published</h4>
-						<p>Wednesday, 31 July, 2013<br>The original discussion took place between Monday, 19 August, 2013 and Friday, 23 August, 2013.</p>
+						<p>Wednesday, 31 July, 2013<br>The original discussion took place between Monday, 19 August, 2013 and Friday, 23 August, 2013.<br><a href="#">Permalink</a></p>
 					</div>
 
 					<div class="col-sm-4">
