--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -8,9 +8,17 @@
 		<link href="stylesheets/bootstrap-buttons.css" rel="stylesheet" type="text/css">
 		<link href="stylesheets/styles.css" rel="stylesheet" type="text/css">
 		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/jquery.anchor.scroll.js"></script>
 		<script src="javascripts/bootstrap.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			jQuery(document).ready(function($){});
+			jQuery(document).ready(function($)
+			{
+				// Enable smooth scrolling for anchor links.
+				$("a[href^='#']").anchorScroll();
+
+				// Enable Tooltips
+				$("[data-toggle='tooltip']").tooltip();
+			});
 		</script>
 	</head>
 
@@ -19,26 +27,26 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<h1><a href="index.html">Books<br><em>&amp;</em><br>Conversations</a></h1>
+						<h1><a href="/">Books<br><em>&amp;</em><br>Conversations</a></h1>
 					</div>
 				</div>
 			</div>
 		</header>
 
 		<article class="jumbotron">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-md-offset-3">
-						<h2>Thanks for subscribing.</h2>
-						<p>I&rsquo;ll let you know when <em>Books &amp; Conversations</em> is updated.</p><p>In the meantime, it would be awesome if you told your friends about <em>Books &amp; Conversations</em>.</p><p>Pretty please?</p>
-						<ul class="list-inline">
-							<li><a href="#" class="btn btn-large btn-twitter">Twitter</a></li>
-							<li><a href="#" class="btn btn-large btn-facebook">Facebook</a></li>
-						</ul>
-					</div>
-				</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<h2>Thanks for subscribing.</h2>
+				<p>I&rsquo;ll let you know when <em>Books &amp; Conversations</em> is updated.</p><p>In the meantime, it would be awesome if you told your friends about <em>Books &amp; Conversations</em>.</p><p>Pretty please?</p>
+				<ul class="list-inline">
+					<li><a href="#" class="btn btn-large btn-twitter">Twitter</a></li>
+					<li><a href="#" class="btn btn-large btn-facebook">Facebook</a></li>
+				</ul>
 			</div>
-		</article>
+		</div>
+	</div>
+</article>
 
 		<footer>
 			<div class="container">
@@ -54,25 +62,25 @@
 					</div>
 
 					<div class="col-sm-4">
-						<h4>Updates</h4>
-						<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="subscribe.html">email</a> or <a href="#">RSS</a>.</p>
-					</div>
+	<h4>Updates</h4>
+	<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="/subscribe">email</a> or <a href="#">RSS</a>.</p>
+</div>
 				</div>
 			</div>
 		</footer>
 
 		<nav>
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<p class="">Copyright &copy; 2013, Made by <a href="https://smallepic.com/">Small Epic</a>.</p>
-						<ul class="list-inline-separated">
-							<li><a href="about.html">About</a></li>
-							<li><del>Archive</del></li>
-						</ul>
-					</div>
-				</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<p class="">Copyright &copy; 2013, Made by <a href="https://smallepic.com/">Small Epic</a>.</p>
+				<ul class="list-inline-separated">
+					<li><a href="/about">About</a></li>
+					<li><del>Archive</del></li>
+				</ul>
 			</div>
-		</nav>
+		</div>
+	</div>
+</nav>
 	</body>
 </html>
