--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -38,7 +38,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 						<h2><em>A conversation about</em></h2>
 						<h1><a href="#introduction">The Shape <em>of</em> Design</a></h1>
 						<h2><em>by</em> Frank Chimero</h2>
-						<a href="#introduction"><img src="/images/header-the-shape-of-design.gif" width="247" height="300" class="img-responsive"></a>
+						<a href="#introduction"><img src="/images/header-the-shape-of-design.gif" width="247" height="300"></a>
 					</div>
 				</div>
 
