Added Facebook and Twitter meta tags.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -1,6 +1,6 @@
 ---
 title: The Shape of Design
-description: This month, we discuss Frank Chimero’s, The Shape of Design with Cat Townsend, Sjors Timmer, Beng-Fai Mok, and Jason Lambert.
+description: Cat Townsend, Sjors Timmer, Beng-Fai Mok, and Jason Lambert discuss Frank Chimero’s The Shape of Design.
 date: 2013-07-31
 start: 2013-08-19
 end: 2013-08-23
