Added copy for about page.

--- a/about.html
+++ b/about.html
@@ -19,10 +19,25 @@ title: About
 	<div class="container">
 		<div class="row">
 			<section class="col-md-6 col-md-offset-3">
-				<p class="lead"><em>Books &amp; Conversations</em> was born out of a desire to combine my two great loves&mdash;thought-provoking books and engaging conversation.</p>
-				<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that&rsquo;s what you see at a toy store. And you must think you&rsquo;re in a toy store, because you&rsquo;re here shopping for an infant named Jeb. </p>
-				<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
-				<p>Besides, I&rsquo;ve already been through too much shit this morning over this case to hand it over to your dumb ass. </p>
+				<p class="lead"><em>Books &amp; Conversations</em> is an ongoing dialogue, born out of a desire to combine my two great loves&mdash;thought-provoking books and interesting conversation.</p>
+				<p>The premise is simple; pick a book, invite an eclectic mix of friends to read it, and host a conversation to share, debate, and educate.</p>
+			</section>
+		</div>
+
+		<div class="row">
+			<section class="col-md-6 col-md-offset-3">
+				<h2>Hello</h2>
+				<p>I&rsquo;m John Ngo, a Berlin based web developer and interaction designer.</p>
+				<p>When I&rsquo;m not hosting discussions for <em>Books &amp; Conversations</em>, I&rsquo;m working on <a href="https://smallepic.com/">Small Epic</a>.</p>
+				<p>As a lover of books, I&rsquo;m passionate about making publishing a sustainable endeavour for the people who produce great work.</p>
+				<p>You can send me an <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">email</a> or follow me on <a href="https://twitter.com/jngo">Twitter</a>.</p>
+			</section>
+		</div>
+
+		<div class="row">
+			<section class="col-md-6 col-md-offset-3">
+				<h2>Colophon</h2>
+				<p>Discussions are organised and conducted using <a href="https://basecamp.com/">Basecamp</a>.  Typefaces are the magical pairing of <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> and <a href="http://www.google.com/fonts/specimen/Gentium+Book+Basic">Gentium Book Basic</a>.  Code is crafted with the assistance of the <a href="http://getbootstrap.com/">Twitter Bootstrap</a> framework and <a href="http://jekyllrb.com/">Jekyll</a> static website generator.  Hosting is provided by <a href="https://github.com/">Github</a> and <a href="http://www.google.com/fonts">Google Fonts</a>.</p>
 			</section>
 		</div>
 
@@ -32,8 +47,8 @@ title: About
 				<p>My sincerest thanks to everyone who has contributed to making <em>Books &amp; Conversations</em> what it is.</p>
 				<ul class="list-inline-separated text-center">
 					<li><a href="https://twitter.com/catisnotpretty">Cat Townsend</a></li>
-					<li><a href="https://twitter.com/sjors">Sjors Timmer</a></li>
 					<li><a href="https://twitter.com/bengfai">Beng-Fai Mok</a></li>
+					<li><a href="https://twitter.com/sjors">Sjors Timmer</a></li>
 					<li><a href="https://twitter.com/geezemo">Jason Lambert</a></li>
 				</ul>
 			</section>
