Finalised transcript for The Shape of Design discussion.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -20,7 +20,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 						<h2><em>A conversation about</em></h2>
 						<h1><a href="#introduction">The Shape <em>of</em> Design</a></h1>
 						<h2><em>by</em> Frank Chimero</h2>
-						<a href="#introduction"><img src="/images/header-the-shape-of-design.gif" width="247" height="300"></a>
+						<a href="#introduction"><img src="/images/header-the-shape-of-design.gif" width="290" height="300"></a>
 					</div>
 				</div>
 
@@ -30,7 +30,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 					<div class="col-12 col-sm-2 col-sm-offset-3">
 						<img src="/images/avatar-jngo.jpg" alt="John Ngo" width="100" height="100" class="img-circle">
 						<h3>John Ngo</h3>
-						<p><a href="https://twitter.com/jngo">@jngo</a><br>Moderator</p>
+						<p><a href="https://twitter.com/jngo">@jngo</a><br><a href="https://smallepic.com/">smallepic.com</a><br>Moderator</p>
 					</div>
 
 					<div class="col-12 col-sm-2">
@@ -51,12 +51,11 @@ stylesheet: /stylesheets/the-shape-of-design.css
 		<article id="introduction">
 			<div class="container">
 				<div class="row">
-					<section class="col-md-6 col-md-offset-3">
-						<h2>Introduction</h2>
-						<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that&rsquo;s what you see at a toy store. And you must think you&rsquo;re in a toy store, because you&rsquo;re here shopping for an infant named Jeb. </p>
-						<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
-						<p>Besides, I&rsquo;ve already been through too much shit this morning over this case to hand it over to your dumb ass. </p>
-					</section>
+					<header class="col-md-6 col-md-offset-3">
+						<p class="lead"><em>The Shape of Design</em> is Frank Chimero&rsquo;s deeply intense, eloquently written, and passionate rumination that will elevate one&rsquo;s appreciation of design from a practice to a craft.</p>
+						<p>It couldn&rsquo;t have been a more fitting selection.  What follows is a great discussion between a designer, a developer, and a product manager with varying degrees of appreciation for design.</p>
+						<p>I hope you enjoy the inaugural <em>Books &amp; Conversations</em> as much as I have creating it.</p>
+					</header>
 				</div>
 
 				<div class="row">
@@ -74,7 +73,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 				</div>
 
 				<div class="row">
-					<section class="col-md-10 col-md-offset-1">
+					<section class="col-12">
 						<blockquote class="pull-quote pull-quote-lg">
 							<p>At many points I found myself near jumping up and down, shouting, &ldquo;Yes! Exactly! That&rsquo;s what I&rsquo;ve been talking about!&rdquo;</p>
 							<small>Cat</small>
@@ -113,7 +112,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 				</div>
 
 				<div class="row">
-					<section class="col-md-10 col-md-offset-1">
+					<section class="col-12">
 						<blockquote class="pull-quote pull-quote-lg">
 							<p>Whether it&rsquo;s jazz, or it&rsquo;s cooking, it [the book] really showed me that design thinking and its concepts apply to so many different fields.</p>
 							<small>Beng-Fai</small>
@@ -208,7 +207,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 						<p class="avatar"><img src="/images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John"></p>
 						<p>Could you elaborate on what you mean by &lsquo;stuff&rsquo;?</p>
 						<p class="avatar"><img src="/images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Beng-Fai"></p>
-						<p>Basically anyone who is creating something and is proud of what they&rsquo;re creating&mdash;as a hobby or professionally.  That list might include designers, developers, start up guys, painters, artists, musicians, etc.</p>
+						<p>Basically anyone who is creating something and is proud of what they&rsquo;re creating&mdash;as a hobby or professionally.  That list might include designers, developers, people who work in startups, painters, artists, musicians, etc.</p>
 						<p class="avatar"><img src="/images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Cat"></p>
 						<p>Despite my personal preference for &lsquo;plain&rsquo; writing, this <em>is</em> a beautiful book written in beautiful language and is definitely not out of place on my bookshelf.</p>
 						<p>My feeling is that it is the type of book that will be referenced more than read in it&rsquo;s entirety.  There are so many passages or quotes that can be used to prove points or prompt discussion.</p>
@@ -220,10 +219,10 @@ stylesheet: /stylesheets/the-shape-of-design.css
 				</div>
 
 				<div class="row">
-					<section class="col-md-6 col-md-offset-3">
-						<h2>The Book</h2>
-						<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I&rsquo;m in a transitional period so I don&rsquo;t wanna kill you, I wanna help you. But I can&rsquo;t give you this case, it don&rsquo;t belong to me.</p>
-					</section>
+					<footer class="col-md-6 col-md-offset-3">
+						<p><a href="http://shapeofdesignbook.com/">The Shape of Design</a> is available for free to read online or in all popular ebook formats (EPUB, MOBI, PDF).</p>
+						<p>Frank Chimero is on <a href="https://twitter.com/fchimero">Twitter</a> and has a <a href="http://frankchimero.com/">website</a>.</p>
+					</footer>
 				</div>
 			</div>
 		</article>
@@ -235,7 +234,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 
 					<div class="col-sm-4">
 						<h4>Thanks</h4>
-						<p>Thanks to <a href="https://twitter.com/catisnotpretty">Cat Townsend</a>, <a href="https://twitter.com/sjors">Sjors Timmer</a>, <a href="https://twitter.com/bengfai">Beng-Fai Mok</a>, and <a href="https://twitter.com/geezemo">Jason Lambert</a> for participating in the inaugural <em>Books &amp; Conversations</em>.  And of course, <a href="http://frankchimero.com/">Frank Chimero</a>, whose book this conversation is dedicated to.</p>
+						<p>Thanks to <a href="https://twitter.com/catisnotpretty">Cat Townsend</a> and <a href="https://twitter.com/bengfai">Beng-Fai Mok</a> for participating in the inaugural <em>Books &amp; Conversations</em>.  And of course, <a href="http://frankchimero.com/">Frank Chimero</a>, whose book inspired this discussion.</p>
 					</div>
 
 					{% include footer_updates.html %}
