--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ title: About
 		<div class="row">
 			<section class="col-md-6 col-md-offset-3">
 				<p class="lead"><em>Books &amp; Conversations</em> is an ongoing dialogue, born out of a desire to combine my two great loves&mdash;thought-provoking books and interesting conversation.</p>
-				<p>The premise is simple; pick a book, invite an eclectic mix of friends to read it, and host a conversation to share, debate, and educate.</p>
+				<p>It&rsquo;s essentially a book club&mdash;pick a book, invite an eclectic mix of friends to read it; and host a conversation to share, debate, and educate.</p>
 			</section>
 		</div>
 
