--- a/index.html
+++ b/index.html
@@ -1,3 +1,43 @@
 ---
+title: Engaging conversations about thought-provoking books.
 ---
-{{ site.posts.first.content }}
+<!DOCTYPE html>
+<html>
+	<head>
+		{% include head.html %}
+	</head>
+
+	<body>
+		<header>
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<h1>Books<br><em>&amp;</em><br>Conversations</h1>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<section class="jumbotron">
+			<div class="container">
+				<div class="row">
+					<form action="http://campaigns.smallepic.com/t/r/s/tlljihj/" method="post" class="col-md-6 col-md-offset-3 form-horizontal">
+						<h2><em>Books &amp; Conversations</em> is an ongoing dialogue, born out of a desire to combine two great loves&mdash;thought-provoking books and interesting conversation.</h2>
+						<p>It&rsquo;s essentially a book club&mdash;pick a book, invite an eclectic mix of friends to read it; and host a conversation to share, debate, and educate.</p>
+						<p>Soon.</p>
+					</form>
+				</div>
+			</div>
+		</section>
+
+		<nav>
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<p class="">Copyright &copy; 2013, Made by <a href="https://smallepic.com/">Small Epic</a>.</p>
+					</div>
+				</div>
+			</div>
+		</nav>
+	</body>
+</html>
