Fixed grid classes.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -16,7 +16,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="col-12">
+					<div class="col-lg-12">
 						<h2><em>A conversation about</em></h2>
 						<h1><a href="#introduction">The Shape <em>of</em> Design</a></h1>
 						<h2><em>by</em> Frank Chimero</h2>
@@ -27,19 +27,19 @@ stylesheet: /stylesheets/the-shape-of-design.css
 				<h2><em>with</em></h2>
 
 				<div class="row">
-					<div class="col-12 col-sm-2 col-sm-offset-3">
+					<div class="col-sm-2 col-sm-offset-3">
 						<img src="/images/avatar-jngo.jpg" alt="John Ngo" width="100" height="100" class="img-circle">
 						<h3>John Ngo</h3>
 						<p><a href="https://twitter.com/jngo">@jngo</a><br><a href="https://smallepic.com/">smallepic.com</a><br>Moderator</p>
 					</div>
 
-					<div class="col-12 col-sm-2">
+					<div class="col-sm-2">
 						<img src="/images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="100" height="100" class="img-circle">
 						<h3>Cat Townsend</h3>
 						<p><a href="https://twitter.com/catisnotpretty">@catisnotpretty</a><br><a href="http://www.notpretty.net/">notpretty.net</a><br>Design</p>
 					</div>
 
-					<div class="col-12 col-sm-2">
+					<div class="col-sm-2">
 						<img src="/images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="100" height="100" class="img-circle">
 						<h3>Beng-Fai Mok</h3>
 						<p><a href="https://twitter.com/bengfai">@bengfai</a><br><a href="http://www.mok.io/">mok.io</a><br>Product</p>
@@ -73,7 +73,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 				</div>
 
 				<div class="row">
-					<section class="col-12">
+					<section class="col-lg-12">
 						<blockquote class="pull-quote pull-quote-lg">
 							<p>At many points I found myself near jumping up and down, shouting, &ldquo;Yes! Exactly! That&rsquo;s what I&rsquo;ve been talking about!&rdquo;</p>
 							<small>Cat</small>
@@ -112,7 +112,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 				</div>
 
 				<div class="row">
-					<section class="col-12">
+					<section class="col-lg-12">
 						<blockquote class="pull-quote pull-quote-lg">
 							<p>Whether it&rsquo;s jazz, or it&rsquo;s cooking, it [the book] really showed me that design thinking and its concepts apply to so many different fields.</p>
 							<small>Beng-Fai</small>
