Grammatical corrections to The Shape of Design discussion.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -1,6 +1,6 @@
 ---
 title: The Shape of Design
-description: John Ngo leads a discussion with Cat Townsend and Beng-Fai Mok on Frank Chimero&rsquo;s The Shape of Design.
+description: John Ngo hosts a discussion with Cat Townsend and Beng-Fai Mok on Frank Chimero&rsquo;s The Shape of Design.
 date: 2013-09-13
 start: 2013-08-18
 end: 2013-09-09
@@ -153,7 +153,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 						<p>I&rsquo;m also going to go out on a limb here and suggest (without evidence) that it was <em>because</em> of his methodical methods Chang was a success, <em>not despite</em>.</p>
 						<p>But I&rsquo;m ranting.</p>
 						<p>John, I completely agree with your point about the contrasting nature of Lean methods versus sweating the details.  However, I think there&rsquo;s a way for them to exist harmoniously.</p>
-						<p>Initially the Lean Startup methodology is, yes, scrappy.  There&rsquo;s a quote by <a href="http://www.businessinsider.com/the-iterate-fast-and-release-often-philosophy-of-entrepreneurship-2009-11/">Reid Hoffman</a> that says &ldquo;if you are not embarrassed by the first version of your product, you&rsquo;ve launched too late&rdquo;.  Kind of the opposite of the &lsquo;long, hard, stupid way&rsquo;.  I don&rsquo;t think there&rsquo;s anything wrong with this approach.  Yes, you can take an age and waste time sweating the details at this stage but that&rsquo;s exactly what a startup doesn&rsquo;t have&mdash;time.</p>
+						<p>Initially the Lean Startup methodology is, yes, scrappy.  There&rsquo;s a quote by <a href="http://www.businessinsider.com/the-iterate-fast-and-release-often-philosophy-of-entrepreneurship-2009-11/">Reid Hoffman</a> that says, &ldquo;if you are not embarrassed by the first version of your product, you&rsquo;ve launched too late&rdquo;.  Kind of the opposite of the &lsquo;long, hard, stupid way&rsquo;.  I don&rsquo;t think there&rsquo;s anything wrong with this approach.  Yes, you can take an age and waste time sweating the details at this stage but that&rsquo;s exactly what a startup doesn&rsquo;t have&mdash;time.</p>
 						<p>But when you get to product-market fit and need to scale, the &lsquo;long, hard, stupid way&rsquo; is probably the better way to go.  Hopefully, you&rsquo;re no longer as constrained by a lack of money and time and in a way, you know exactly what your customers want.</p>
 						<p>Any other comments on this take away?</p>
 						<p>As for my two cents, what I really liked about the book was Frank&rsquo;s use of non-traditional design examples.  Whether it&rsquo;s jazz, or it&rsquo;s cooking, it really showed me that design thinking and its concepts apply to so many different fields.</p>
@@ -182,7 +182,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 						<p><strong>Frank Chimero talks a lot about narrative as an essential component to design.  This isn&rsquo;t anything new&mdash;we&rsquo;re told about the importance of stories all the time, whether it is brands as stories or the use of user stories in software development and product management.</strong></p>
 						<p><strong>How do you feel about stories on a practical level?  Do you frequently incorporate stories in some shape or form in your own work?</strong></p>
 						<p class="avatar"><img src="/images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Cat"></p>
-						<p>I&rsquo;m always harping on at my clients about the importance of telling a good story about their product or service.  But the book did prompt me to think more about how I tell the story of my work.  The example Frank gives about working with design students to tell the story or shapes and colours on a page was quite interesting.  It made me realise that it would probably help to talk that way when explaining design to clients.  I know that I chose that colour or that type to induce some kind of feeling, but they don&rsquo;t necessarily pick up on that without prompting.</p>
+						<p>I&rsquo;m always harping on at my clients about the importance of telling a good story about their product or service.  But the book did prompt me to think more about how I tell the story of my work.  The example Frank gives about working with design students to tell the story of shapes and colours on a page was quite interesting.  It made me realise that it would probably help to talk that way when explaining design to clients.  I know that I chose that colour or that type to induce some kind of feeling, but they don&rsquo;t necessarily pick up on that without prompting.</p>
 						<p class="avatar"><img src="/images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Beng-Fai"></p>
 						<p>Funnily enough, as a management consultant (previous life), whenever we were preparing a deck for a client (i.e. every day) we would often run through what our &lsquo;story&rsquo; was before actually creating slides.  If someone wanted to create a new slide, in addition to ensuring it adhered to good communication principles, we would often ask whether it fits in with the &lsquo;story&rsquo;.</p>
 						<p>Having said that, when you&rsquo;re in the trenches, head down building stuff, I do find it hard to tie what I&rsquo;m doing back to the overall story.  I imagine it might be easier for a designer.  The relationship between story and visuals appear to be easier to relate.</p>
@@ -220,7 +220,7 @@ stylesheet: /stylesheets/the-shape-of-design.css
 
 				<div class="row">
 					<footer class="col-md-6 col-md-offset-3">
-						<p><a href="http://shapeofdesignbook.com/">The Shape of Design</a> is available for free to read online or in all popular ebook formats (EPUB, MOBI, PDF).</p>
+						<p><a href="http://shapeofdesignbook.com/">The Shape of Design</a> is available to read online or downloadable in all popular ebook formats (EPUB, MOBI, PDF).</p>
 						<p>Frank Chimero is on <a href="https://twitter.com/fchimero">Twitter</a> and has a <a href="http://frankchimero.com/">website</a>.</p>
 					</footer>
 				</div>
