Add links for social media sharing buttons.

--- a/thank-you.html
+++ b/thank-you.html
@@ -9,9 +9,8 @@ title: Subscribed
 				<h2>Thanks for subscribing.</h2>
 				<p>I&rsquo;ll let you know when <em>Books &amp; Conversations</em> is updated.</p><p>In the meantime, it would be awesome if you told your friends about <em>Books &amp; Conversations</em>.</p><p>Pretty please?</p>
 				<ul class="list-inline">
-					<!-- TODO: Add links for social media sharing buttons. -->
-					<li><a href="#" class="btn btn-large btn-twitter">Twitter</a></li>
-					<li><a href="#" class="btn btn-large btn-facebook">Facebook</a></li>
+					<li><a href="http://twitter.com/intent/tweet?related=small_epic&text=Books+%26+Conversations%3A&url={{ site.url }}" class="btn btn-large btn-twitter">Twitter</a></li>
+					<li><a href="https://www.facebook.com/sharer/sharer.php?t=Books+%26+Conversations&u={{ site.url }}" class="btn btn-large btn-facebook">Facebook</a></li>
 				</ul>
 			</div>
 		</div>
