Enabled meta tags for social media icons.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -5,6 +5,7 @@ date: 2013-09-13
 start: 2013-08-18
 end: 2013-09-09
 stylesheet: /stylesheets/the-shape-of-design.css
+image: /images/header-the-shape-of-design.gif
 ---
 <!DOCTYPE html>
 <html>
