--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Engaging conversations about thought-provoking books.
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<h1>Books<br><em>&amp;</em><br>Conversations</h1>
+						<h1>Books <em>&amp;</em> Conversations</h1>
 					</div>
 				</div>
 			</div>
