--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ title: About
 		<div class="row">
 			<section class="col-md-6 col-md-offset-3">
 				<h2>Colophon</h2>
-				<p>Discussions are organised and conducted using <a href="https://basecamp.com/">Basecamp</a>.  Typefaces are the magical pairing of <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> and <a href="http://www.google.com/fonts/specimen/Gentium+Book+Basic">Gentium Book Basic</a>.  Code is crafted with the assistance of the <a href="http://getbootstrap.com/">Twitter Bootstrap</a> framework and <a href="http://jekyllrb.com/">Jekyll</a> static website generator.  Hosting is provided by <a href="https://github.com/">Github</a> and <a href="http://www.google.com/fonts">Google Fonts</a>.</p>
+				<p>Discussions are organised and conducted using <a href="https://basecamp.com/">Basecamp</a>.  Transcripts are edited with <a href="https://editorially.com/">Editorially</a>.  Typefaces are the magical pairing of <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> and <a href="http://www.google.com/fonts/specimen/Gentium+Book+Basic">Gentium Book Basic</a>.  Code is crafted with the assistance of the <a href="http://getbootstrap.com/">Twitter Bootstrap</a> framework and <a href="http://jekyllrb.com/">Jekyll</a> static website generator.  Hosting is provided by <a href="https://github.com/">Github</a> and <a href="http://www.google.com/fonts">Google Fonts</a>.</p>
 			</section>
 		</div>
 
