--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ title: About
 		<div class="row">
 			<section class="col-md-6 col-md-offset-3">
 				<p class="lead"><em>Books &amp; Conversations</em> is an ongoing dialogue, born out of a desire to combine my two great loves&mdash;thought-provoking books and interesting conversation.</p>
-				<p>It&rsquo;s essentially a book club&mdash;pick a book, invite an eclectic mix of friends to read it; and host a conversation to share, debate, and educate.</p>
+				<p>It&rsquo;s essentially a book club&mdash;pick a book, invite an eclectic mix of friends to read it; and host a discussion to share, debate, and educate.</p>
 			</section>
 		</div>
 
@@ -51,6 +51,20 @@ title: About
 					<li><a href="https://twitter.com/sjors">Sjors Timmer</a></li>
 					<li><a href="https://twitter.com/geezemo">Jason Lambert</a></li>
 				</ul>
+			</section>
+		</div>
+
+		<div class="row">
+			<section class="col-md-6 col-md-offset-3">
+				<h2>Participate</h2>
+				<p>Want to join one of these upcoming discussions?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
+				<ul>
+					<li><a href="http://37signals.com/remote/">Remote</a> <em>by</em> Jason Fried &amp; David Heinemeier Hansson</li>
+					<li><a href="http://jackcheng.com/these-days/">These Days</a> <em>by</em> Jack Cheng</li>
+					<li><a href="http://www.anthempress.com/the-content-machine/">The Content Machine</a> <em>by</em> Michael Bhaskar</li>
+					<li><a href="http://www.mikrotext.de/books/aboud-saeed-the-smartest-guy-on-facebook-status-updates-from-syria/">The Smartest Guy on Facebook</a> <em>by</em> Aboud Said</li>
+				</ul>
+				<p>Have a book that&rsquo;s been on your reading list for too long?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Let me know</a> and we&rsquo;ll read it together!</p>
 			</section>
 		</div>
 	</div>
