Revised responsive styles for margins on mobile devices.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -31,7 +31,7 @@ image: /images/header-the-shape-of-design.gif
 					<div class="col-sm-2 col-sm-offset-3">
 						<img src="/images/avatar-jngo.jpg" alt="John Ngo" width="100" height="100" class="img-circle">
 						<h3>John Ngo</h3>
-						<p><a href="https://twitter.com/jngo">@jngo</a><br><a href="https://smallepic.com/">smallepic.com</a><br>Moderator</p>
+						<p><a href="https://twitter.com/jngo">@jngo</a><br><a href="https://smallepic.com/">smallepic.com</a><br>Developer</p>
 					</div>
 
 					<div class="col-sm-2">
