--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="col-12">
+					<div class="col-lg-12">
 						<h1>Books <em>&amp;</em> Conversations</h1>
 					</div>
 				</div>
@@ -32,7 +32,7 @@
 		<nav>
 			<div class="container">
 				<div class="row">
-					<div class="col-12">
+					<div class="col-lg-12">
 						<p class="">Copyright &copy; 2013, Made by <a href="https://smallepic.com/">Small Epic</a>.</p>
 					</div>
 				</div>
