--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -14,6 +14,16 @@ image: /images/header-the-shape-of-design.gif
 	</head>
 
 	<body>
+		<header class="masthead">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1><a href="/">Books <em>&amp;</em> Conversations</a></h1>
+					</div>
+				</div>
+			</div>
+		</header>
+
 		<header>
 			<div class="container">
 				<div class="row">
