--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@ title: About
 
 		<div class="row">
 			<section class="col-md-6 col-md-offset-3">
+				<p class="text-center"><img src="/images/avatar-jngo.jpg" alt="John Ngo" width="100" height="100" class="img-circle"></p>
 				<h2>Hello</h2>
 				<p>I&rsquo;m John Ngo, a Berlin based web developer and interaction designer.</p>
 				<p>When I&rsquo;m not hosting discussions for <em>Books &amp; Conversations</em>, I&rsquo;m working on <a href="https://smallepic.com/">Small Epic</a>.</p>
