--- a/about.html
+++ b/about.html
@@ -64,6 +64,7 @@ title: About
 					<li><a href="http://jackcheng.com/these-days/">These Days</a> <em>by</em> Jack Cheng</li>
 					<li><a href="http://www.anthempress.com/the-content-machine/">The Content Machine</a> <em>by</em> Michael Bhaskar</li>
 					<li><a href="http://www.mikrotext.de/books/aboud-saeed-the-smartest-guy-on-facebook-status-updates-from-syria/">The Smartest Guy on Facebook</a> <em>by</em> Aboud Said</li>
+					<li><a href="http://theboykings.com/">The Boy Kings</a> <em>by</em> Kate Losse</li>
 				</ul>
 				<p>Have a book that&rsquo;s been on your reading list for too long?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Let me know</a> and we&rsquo;ll read it together!</p>
 			</section>
