--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -231,7 +231,7 @@ image: /images/header-the-shape-of-design.gif
 
 				<div class="row">
 					<footer class="col-md-6 col-md-offset-3">
-						<p><a href="http://shapeofdesignbook.com/">The Shape of Design</a> is available to read online or downloadable in all popular ebook formats (EPUB, MOBI, PDF).</p>
+						<p><a href="http://shapeofdesignbook.com/">The Shape of Design</a> is available to read online or downloadable in all popular ebook formats (EPUB, MOBI, PDF).  A reprint of the hardcover version is also available for preorder.</p>
 						<p>Frank Chimero is on <a href="https://twitter.com/fchimero">Twitter</a> and has a <a href="http://frankchimero.com/">website</a>.</p>
 					</footer>
 				</div>
