--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -17,8 +17,12 @@ image: /images/header-the-shape-of-design.gif
 		<header class="masthead">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-sm-offset-2 col-sm-8">
 						<h1><a href="/">Books <em>&amp;</em> Conversations</a></h1>
+					</div>
+
+					<div class="col-sm-2 hidden-xs">
+						<p><a href="/about">About</a></p>
 					</div>
 				</div>
 			</div>
