Renamed footer_updates.html to footer_subscribed.html.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -252,7 +252,7 @@ image: /images/header-the-shape-of-design.gif
 						<p>Thanks to <a href="https://twitter.com/catisnotpretty">Cat Townsend</a> and <a href="https://twitter.com/bengfai">Beng-Fai Mok</a> for participating in the inaugural <em>Books &amp; Conversations</em>.  And of course, <a href="http://frankchimero.com/">Frank Chimero</a>, whose book inspired this discussion.</p>
 					</div>
 
-					{% include footer_updates.html %}
+					{% include footer_subscribe.html %}
 				</div>
 			</div>
 		</footer>
