--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -14,16 +14,20 @@ image: /images/header-the-shape-of-design.gif
 	</head>
 
 	<body>
-		<header class="masthead">
+		<header class="masthead masthead-sm">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-offset-2 col-sm-8">
+					<div class="col-lg-offset-3 col-lg-6">
 						<h1><a href="/">Books <em>&amp;</em> Conversations</a></h1>
 					</div>
 
-					<div class="col-sm-2 hidden-xs">
-						<p><a href="/about">About</a></p>
-					</div>
+					<nav class="col-lg-3">
+						<ul class="list-inline">
+							<li><a href="/about">About</a></li>
+							<li><a href="/participate">Participate</a></li>
+							<li><a href="/subscribe">Subscribe</a></li>
+						</ul>
+					</nav>
 				</div>
 			</div>
 		</header>
