Added markup and styles to display archive on home page.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -1,11 +1,14 @@
 ---
 title: The Shape of Design
+author: Frank Chimero
 description: John Ngo hosts a discussion with Cat Townsend and Beng-Fai Mok on Frank Chimero&rsquo;s The Shape of Design.
-date: 2013-09-13
+date: 2013-10-30
 start: 2013-08-18
 end: 2013-09-09
 stylesheet: /stylesheets/the-shape-of-design.css
 image: /images/header-the-shape-of-design.gif
+background-color: "#E44249"
+color: "#F7F7EC"
 ---
 <!DOCTYPE html>
 <html>
