--- a/_posts/2013-11-27-amplification.html
+++ b/_posts/2013-11-27-amplification.html
@@ -1,11 +1,14 @@
 ---
 title: Amplification
+author: Justin Jackson
 description: John Ngo and Beng-Fai Mok chat about Justin Jackson&rsquo;s Amplification.
-date: 2013-11-27
+date: 2013-11-29
 start: 2013-09-07
 end: 2013-09-13
 stylesheet: /stylesheets/amplification.css
 image: /images/header-amplification.png
+background-color: "#AB1802"
+color: "#F0EDE0"
 ---
 <!DOCTYPE html>
 <html>
