--- a/_posts/2013-11-27-amplification.html
+++ b/_posts/2013-11-27-amplification.html
@@ -176,10 +176,14 @@ color: "#F0EDE0"
 
 				<div class="row">
 					<footer class="col-md-6 col-md-offset-3">
+						<hr>
 						<p><a href="http://buildandlaunch.net/book/amplification/">Amplification</a> is available as a package that includes the ebook (PDF) and bonus material including video content and a Hacker News Handbook (PDF).</p>
 						<p>Justin Jackson is on <a href="http://twitter.com/mijustin">Twitter</a> and has a <a href="http://justinjackson.ca/">website</a>.</p>
+						<hr>
 					</footer>
 				</div>
+
+				{% include footnote_subscribe.html %}
 			</div>
 		</article>
 
