Corrected spelling for Aboud Saeed.

--- a/participate.html
+++ b/participate.html
@@ -25,7 +25,7 @@ title: Participate
 					<li><a href="http://37signals.com/remote/">Remote</a> <em>by</em> Jason Fried &amp; David Heinemeier Hansson</li>
 					<li><a href="http://jackcheng.com/these-days/">These Days</a> <em>by</em> Jack Cheng</li>
 					<li><a href="http://www.anthempress.com/the-content-machine/">The Content Machine</a> <em>by</em> Michael Bhaskar</li>
-					<li><a href="http://www.mikrotext.de/books/aboud-saeed-the-smartest-guy-on-facebook-status-updates-from-syria/">The Smartest Guy on Facebook</a> <em>by</em> Aboud Said</li>
+					<li><a href="http://www.mikrotext.de/books/aboud-saeed-the-smartest-guy-on-facebook-status-updates-from-syria/">The Smartest Guy on Facebook</a> <em>by</em> Aboud Saeed</li>
 					<li><a href="http://theboykings.com/">The Boy Kings</a> <em>by</em> Kate Losse</li>
 					<li><a href="https://www.goodreads.com/book/show/66354.Flow">Flow</a> <em>by</em> Mihaly Csikszentmihalyi</li>
 					<li><a href="https://www.goodreads.com/book/show/38310.How_Buildings_Learn">How Buildings Learn</a> <em>by</em> Stewart Brand</li>
