Explicitly set page type in posts.

--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -5,6 +5,7 @@ description: John Ngo hosts a discussion with Cat Townsend and Beng-Fai Mok on F
 date: 2013-10-30
 start: 2013-08-18
 end: 2013-09-09
+type: post
 stylesheet: /stylesheets/posts/the-shape-of-design.css
 image: /images/header-the-shape-of-design.gif
 background-color: "#E44249"
