--- a/_posts/2013-11-27-amplification.html
+++ b/_posts/2013-11-27-amplification.html
@@ -5,6 +5,7 @@ description: John Ngo and Beng-Fai Mok chat about Justin Jackson&rsquo;s Amplifi
 date: 2013-11-29
 start: 2013-09-07
 end: 2013-09-13
+type: post
 stylesheet: /stylesheets/posts/amplification.css
 image: /images/header-amplification.png
 background-color: "#AB1802"
