--- a/_posts/2013-07-31-the-shape-of-design.html
+++ b/_posts/2013-07-31-the-shape-of-design.html
@@ -5,7 +5,7 @@ description: John Ngo hosts a discussion with Cat Townsend and Beng-Fai Mok on F
 date: 2013-10-30
 start: 2013-08-18
 end: 2013-09-09
-type: post
+type: posts
 stylesheet: /stylesheets/posts/the-shape-of-design.css
 image: /images/header-the-shape-of-design.gif
 background-color: "#E44249"
@@ -19,9 +19,7 @@ color: "#F7F7EC"
   </head>
 
   <body>
-    <!-- <header class="masthead masthead-sm"> -->
-      {% include masthead.html %}
-    <!-- </header> -->
+    {% include masthead.html %}
 
     <header class="cover">
       <div class="container">
